<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- styles.xml -->
    <string name="app_name">Morning Drone</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- about.xml -->
    <string name="app_version_credits">Version 1.0 beta \n \n ICT Innovation project. \n Group 7</string>
    <string name="thank_you">Thank you for using Morning Drone!</string>

    <!-- alarms_listview.xml -->
    <string name="add_alarm">add alarm</string>

    <!-- alarms_listview_alarm.xml -->
    <string name="alarm_time">9:00</string>
    <string name="dismiss_alarm">dismiss</string>
    <string name="delete_alarm">delete</string>
    <string name="alarm_name">wake up message</string>
    <string name="alarm_music">Music</string>
    <string name="monday"><u>monday</u></string>
    <string name="tuesday"><u>tuesday</u></string>
    <string name="wednesday"><u>wednesday</u></string>
    <string name="thursday"><u>thursday</u></string>
    <string name="friday"><u>friday</u></string>
    <string name="saturday"><u>saturday</u></string>
    <string name="sunday"><u>sunday</u></string>
    <string name="done">Done</string>

    <!-- fragment_add_alarm.xml -->
    <string name="btn_add_music">music</string>
    <string name="btn_add_record">record</string>
    <string name="btn_play_record">play</string>
    <string name="btn_alarm_ringtone">preview</string>
    <string name="save_alarm">done</string>

    <!-- ringing_alarm_fragment.xml -->
    <string name="btn_stop_alarm">stop</string>
    <string name="btn_snooze_alarm">snooze</string>

    <!-- main_activity_actions.xml -->
    <string name="default_options">Default Alarm Options</string>
    <string name="display_notification">Persistent Notification</string>
    <string name="delete_all">Delete All</string>
    <string name="system_default">System default</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_sure">Are you sure you want to delete this alarm?</string>
    <string name="delete_all_sure">Are you sure you want to delete all alarms?</string>
    <string name="time_out_title">Alarm time out</string>
    <string name="time_out_error">WARNING: This alarm has timed out waiting for an acknowledgment.</string>
    <string name="everyday">Every day</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="dow_sun_short">Su</string>
    <string name="dow_mon_short">M</string>
    <string name="dow_tue_short">Tu</string>
    <string name="dow_wed_short">W</string>
    <string name="dow_thu_short">Th</string>
    <string name="dow_fri_short">F</string>
    <string name="dow_sat_short">Sa</string>
    <string name="dow_sun">Sunday</string>
    <string name="dow_mon">Monday</string>
    <string name="dow_tue">Tuesday</string>
    <string name="dow_wed">Wednesday</string>
    <string name="dow_thu">Thursday</string>
    <string name="dow_fri">Friday</string>
    <string name="dow_sat">Saturday</string>
    <string name="day">%d day</string>
    <string name="days">%d days</string>
    <string name="hour">%d hour</string>
    <string name="hours">%d hours</string>
    <string name="minute">%d minute</string>
    <string name="minutes">%d minutes</string>
    <string name="minute_abbriv">%dm</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="label">Label</string>
    <string name="repeat">Repeat</string>
    <string name="no_repeats">No repeats</string>
    <string name="fade_description">%1$d%% to %2$d%% over %3$d seconds</string>
    <string name="minus_five">-5</string>
    <string name="snooze">SNOOZE</string>
    <string name="dismiss">DISMISS</string>
    <string name="alarm_options">Alarm Options</string>
    <string name="plus_five">+5</string>
    <string name="bluetooth">bluetooth</string>
    <string name="admin_receiver_status_enabled">admin receiver status enabled</string>
    <string name="admin_receiver_status_disabled">admin receiver status disabled</string>
    <string name="internal">Internal</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="selected">Selected: </string>
    <string name="alarm_tone">Alarm tone</string>
    <string name="device_admin_description">Turns the screen off and locks your device with a single touch.</string>
    <string name="message">Are you sure?</string>
    <string name="wait">Wait to connect the device...</string>
    <string name="ioexception">Connect failed!</string>
    <string name="nodevice">There isn\'t bluetooch devices!</string>
    <string name="searchdevice">Search Device</string>
    <string name="selectonedevice">select device to connect</string>
    <string name="scaning">Scaning...</string>
    <string name="monitor">Monitor</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="hexview">View as Hex</string>
    <string name="hexsend">Send as Hex</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="newline">Send as New Line</string>
    <string name="bluetooth2">bluetooth2</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Morning Drone</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="height">altezza</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="drone">Drone</string>
    <string name="half">Half meter</string>
    <string name="oneMeter">One meter</string>
    <string name="oneHalfMeter">One and half meter</string>
    <string name="refresh">refresh</string>

    <string-array name="height">
        <item>@string/half</item>
        <item>@string/oneMeter</item>
        <item>@string/oneHalfMeter</item>
    </string-array>
</resources>
