<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:id="@+id/main">
    <ScrollView android:id="@+id/scrollView"
        android:layout_width="fill_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:id="@+id/btnSearchDevice" android:text="@string/searchdevice"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:textSize="20dip" android:visibility="gone"></Button>
            <Button android:id="@+id/btnMonitor" android:text="@string/monitor"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:textSize="20dip"></Button>
            <Button android:id="@+id/btnAbout" android:text="@string/about"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:textSize="20dip" android:visibility="gone"></Button>
            <Button android:id="@+id/btnExit" android:text="@string/exit"
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:textSize="20dip" ></Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
