<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:id="@+id/scrollView_addAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" >

        <LinearLayout
            android:id="@+id/container_ringing_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_time"
                style="@style/textViewWakeupTime"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="@dimen/view_vertical_margin"
                android:text="@string/alarm_time" />
           <!-- <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">-->
               <!-- <Button
                    android:id="@+id/snooze_minus_five"
                    android:text="@string/minus_five"
                    android:textSize="36sp"
                    android:background="@drawable/rect_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" />-->

                <Button
                    android:id="@+id/btn_snooze_alarm"
                    style="@style/buttonSnooze"
                    android:layout_width="263dp"
                    android:layout_height="250dp"
                    android:layout_marginBottom="-40dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/btn_snooze_alarm" />

               <!-- <Button
                    android:id="@+id/snooze_plus_five"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:background="@drawable/rect_btn"
                    android:text="@string/plus_five"
                    android:textSize="36sp" />
            </LinearLayout> -->

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_stop_alarm"
        style="@style/buttonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_action_cancel"
        android:drawablePadding="-120dp"
        android:paddingRight="90dp"
        android:text="@string/btn_stop_alarm" />
   <!-- <TextView
        style="@android:style/TextAppearance.Large"
        android:id="@+id/snooze_text"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-normal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_above="@+id/alarm_name"
        android:layout_marginBottom="7dp"
        />-->
    <TextView
        android:id="@+id/alarm_name"
        style="@style/textViewNormal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-normal"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/alarm_label"
        android:layout_centerHorizontal="true" />
         <TextView
        android:id="@+id/alarm_label"
        android:textSize="36sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_stop_alarm"/>

</RelativeLayout>